# CubeDevIntegration

./: .env  .gitignore  README.md  docker-compose.yml  package.json
backend/: pyproject.toml  requirements.txt  sampledb.py  server.py  settings.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  queries.js
frontend/src/components/: ChartContainer.jsx  LineChart.jsx  NumberChart.jsx  PieChart.jsx  header.jsx
frontend/src/pages/: Dashboard.js
frontend/src/shared/: chartOptions.js  colors.js  utils.js
model/cubes/: gold24_prices.js  invoices.js  mandate_notifications.js  mandate_transactions.js  mandates.js  partners.js  transactions.js  user_banks.js  user_kyc_details.js  user_metas.js  users.js  vendor_api_logs.js  wallets.js
